[package]
name = "lvm-snap-rsync"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
toml = "0.5"
anyhow = "1.0"
clap = { version = "4.0", features = ["derive"] }

# HTTP file server for snapshot downloads
axum = "0.7"
tower-http = { version = "0.5", features = ["fs", "cors", "set-header"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
